fixed scrollbar gap

--- a/main.css
+++ b/main.css
@@ -1,13 +1,24 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 html {
-    position: relative;
-    min-height: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;
 }
 
 body {
-    margin-top: 56px;
-    margin-bottom: 80px;
     background-color: #d3d3d3;
-    overflow: auto;
+    position: relative;
+    margin: 0;
+    padding-bottom: 80px;
+    min-height: 100%;
+    margin-top: 56px;
+    overflow-x: hidden; 
 }
 
 .header {
@@ -18,7 +29,9 @@ body {
 
 .footer {
     position: absolute;
+    right: 0;
     bottom: 0;
+    left: 0;
     width: 100%;
     background-color: black;
     padding-top: 10px;
